@@ -40,6 +40,9 @@ Version 7.2 05-June-07
 
     (f) \g{name} is another synonym - part of Perl 5.10's unification of
         reference syntax.
+        
+    (g) (?| introduces a group in which the numbering of parentheses in each
+        alternative starts with the same number.  
 
  7. Added two new calls to pcre_fullinfo(): PCRE_INFO_OKPARTIAL and
     PCRE_INFO_JCHANGED.
